--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     <script src="./src/index.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Fit Tracker</h1>
+        <br>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Daily Intentions</a></li>
+            <li><a href="#">Workout Schedule</a></li>
+            <li><a href="#">Meals</a></li>
+            <li><a href="#">Tracking</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <div class="home-page-container">
+            <div class="intentions card">
+                <div class="intentions-info">
+                    <h1>Daily Intentions</h1>
+                    <h3>Date</h3>
+                    <span>Sleep</span>
+                    <span>Nutrition</span>
+                    <span>Hydration</span>
+                    <span>Intentions</span>
+                    <span>Reflections</span>
+                </div>
+            </div>
+
+            <div class="workouts card">
+                <div class="workouts-info">
+
+                </div>
+            </div>
+
+            <div class="meals card">
+                <div class="meals-info">
+
+                </div>
+            </div>
+
+            <div class="tracking card">
+                <div class="tracking-info">
+
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
