fetched info for daily intentions card and motivational quote

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="#">Meals</a></li>
             <li><a href="#">Workout Schedule</a></li>
             <li><a href="#">Daily Intentions</a></li>
-            <li><a href="#">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
         </ul>
     </header>
 
@@ -25,15 +25,16 @@
                     <div class="intentions-info">
                         <h1>Daily Intentions</h1>
                         <h3>Date</h3>
-                        <p>Sleep</p>
-                        <p>Nutrition</p>
-                        <p>Hydration</p>
-                        <p>Intentions</p>
-                        <p>Reflections</p>
+                        <p class="sleep">Sleep</p>
+                        <p class="nutrition">Nutrition</p>
+                        <p class="hydration">Hydration</p>
+                        <p class="intention">Intentions</p>
+                        <p class="reflections">Reflections</p>
                     </div>
                 </div>
                 <div class="motivation card">
                     <h1>MOTIVATIONAL QUOTE</h1>
+                    <p>author</p>
                 </div>
                 <br>
                 <div class="workouts card">
